<resources>
    <string name="app_name">GO SOPT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- common -->
    <string name="dummy">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="wrong_input_msg">잘못된 입력입니다.</string>
    <string name="unknown_error_msg">알 수 없는 오류가 발생했습니다.</string>
    <string name="binding_error_msg">Binding not initialized to reference the view.</string>
    <string name="view_type_error_msg">Unknown View Type : %d</string>
    <string name="dialog_not_initialized_error_msg">Dialog not initialized</string>
    <string name="adapter_not_initialized_error_msg">Adapter not initialized</string>

    <!-- login -->
    <string name="login_welcome_msg">Welcome to GO Android!</string>
    <string name="login_id_label">ID</string>
    <string name="login_id_hint">아이디를 입력하세요. (6~10자)</string>
    <string name="login_pwd_label">PASSWORD</string>
    <string name="login_pwd_hint">비밀번호를 입력하세요. (8~12자)</string>
    <string name="login_login_btn">LOG IN</string>
    <string name="login_signup_btn">SIGN UP</string>
    <string name="login_signup_success_msg">회원가입이 완료되었습니다.</string>
    <string name="login_login_success_msg">로그인에 성공했습니다.</string>

    <!-- signup -->
    <string name="signup_mbti_label">MBTI</string>
    <string name="signup_mbti_hint">MBTI를 입력하세요.</string>
    <string name="signup_signup_complete_btn">SIGN UP COMPLETE</string>
    <string name="signup_specialty_label">SPECIALTY</string>
    <string name="signup_specialty_hint">특기를 입력하세요.</string>
    <string name="signup_name_label">NAME</string>
    <string name="signup_name_hint">이름을 입력하세요.</string>
    <string name="signup_invalid_id_msg">잘못된 아이디입니다.</string>
    <string name="signup_invalid_pwd_msg">잘못된 비밀번호입니다.</string>
    <string name="signup_invalid_name_msg">잘못된 이름입니다.</string>
    <string name="signup_duplicated_info_msg">이미 가입된 정보입니다.</string>
    <string name="signup_asterisk_label">*</string>
    <string name="signup_id_alert">6~10자의 영문과 숫자만 사용 가능합니다.</string>
    <string name="signup_pwd_alert">6~12자의 영문과 숫자, 특수기호만 사용 가능합니다.</string>

    <!-- main -->
    <string name="main_home">홈</string>
    <string name="main_gallery">갤러리</string>
    <string name="main_search">검색</string>
    <string name="main_follower">팔로워</string>
    <string name="main_profile">프로필</string>

    <!-- home -->
    <string name="home_get_repo_list_fail_msg">리포지토리 목록 불러오기에 실패했습니다.</string>
    <string name="home_repo_header_title">Repository List</string>
    <string name="home_repo_img_description">리포지토리 %s 이미지</string>

    <!-- gallery -->
    <string name="gallery_image_oversized_error_msg">이미지 크기 제한을 초과하였습니다.</string>
    <string name="gallery_post_image_success_msg">이미지가 전송되었습니다.</string>

    <!-- search -->
    <string name="search_fragment">SEARCH FRAGMENT</string>

    <!-- follower -->
    <string name="follower_header_title">Followers</string>
    <string name="follower_get_follower_list_null_msg">팔로워가 존재하지 않습니다.</string>

    <!-- profile -->
    <string name="profile_name">이름 : %s</string>
    <string name="profile_specialty">특기 : %s</string>
    <string name="profile_mbti">MBTI : %s</string>
    <string name="profile_logout_btn">LOG OUT</string>
    <string name="profile_logout_msg">로그아웃되었습니다.</string>
    <string name="profile_img_description">프로필 이미지</string>

    <!-- logout dialog -->
    <string name="logout_dialog_question">로그아웃 하시겠습니까?</string>
    <string name="logout_dialog_description">자동 로그인이 해제됩니다.</string>
    <string name="logout_dialog_cancel">CANCEL</string>
    <string name="logout_dialog_logout">LOG OUT</string>
    <string name="gallery_send_image">이미지 전송하기</string>
    <string name="gallery_select_image">이미지 선택하기</string>
</resources>