<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.main.profile.dialog.LogoutDialogFragment">

    <data>

        <variable
            name="viewModel"
            type="org.android.go.sopt.presentation.main.profile.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_logout_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/shape_white_fill_20_rect"
            android:padding="17dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_logout_dialog_question"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/logout_dialog_question"
                android:textAppearance="?textAppearanceHeadlineLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_logout_dialog_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="14dp"
                android:text="@string/logout_dialog_description"
                android:textAppearance="?textAppearanceBodyLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_logout_dialog_question" />

            <Button
                android:id="@+id/btn_logout_dialog_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray_200"
                android:paddingHorizontal="24dp"
                android:paddingVertical="18dp"
                android:text="@string/logout_dialog_cancel"
                android:textAppearance="?attr/textAppearanceHeadlineSmall"
                android:textColor="@color/gray_500" />

            <Button
                android:id="@+id/btn_logout_dialog_logout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="24dp"
                android:paddingVertical="18dp"
                android:text="@string/logout_dialog_logout"
                android:textAppearance="?attr/textAppearanceHeadlineSmall" />

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/flow_logout_dialog_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:constraint_referenced_ids="btn_logout_dialog_cancel,btn_logout_dialog_logout"
                app:flow_horizontalGap="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_logout_dialog_description" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>